...
            <InfoAlert
                isOpen={alert.isOpen}
                onClose={() => setAlert(prev => ({ ...prev, isOpen: false }))}
                title="Information"
                message={alert.message}
            />
            <Text className="mb-4 text-4xl font-bold">Create MergeRequest</Text>

            <Controller
                control={control}
                rules={{ required: 'Source Branch is required' }}
                render={({ field: { onChange, onBlur, value } }) => (
                    <>
...
                <Button
                    variant="outline"
                    onPress={() => router.back()}
                    className='m-2'
                    disabled={createMergeRequestMutation.isPending}
                >
                    <Text>Cancel</Text>
                </Button>
            </View>
        </>
    );
}

